# Auth

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  run-sonar.sh  sonar-project.properties  start_celery.py  test_encryption.py
.github/workflows/: main.yml
Dependenices/: dependencies.py
app/: .env  main.py
app/helper/: utils.py
app/model/: model.py
app/routes/: user1.py  user2.py
app/schema/: schemas.py
app/services/: notifications.py  user.py  user1.py  user2.py
app/templates/: email_verified_failed.html  mail_password_reset.html  registration.html
auth/Dependenices/: dependencies.py
auth/config/: bloom.py  database.py  notification.py  redis.py  secert.py  security_config.py  worker.py
auth/core/: security.py
auth/data/bloom/: blacklisted_tokens.bloom  blacklisted_tokens.json  compromised_passwords.bloom  compromised_passwords.json  registered_emails.bloom  registered_emails.json  suspicious_ips.bloom  suspicious_ips.json
auth/helper/: utils.py
auth/logger/: log.py
auth/middleware/: security.py
auth/model/: encrypted_model.py  model.py
auth/routes/: user1.py  user2.py
auth/security/: cache_encryption.py  encryption.py  template_validator.py
auth/services/: notifications.py  user.py  user1.py  user2.py
auth/templates/: email_verified.html  mail_email_verify.html
config/: database.py  redis.py
core/: security.py
helper/: utils.py
model/: model.py
routes/: user1.py  user2.py
services/: user.py  user1.py  user2.py
tests/: test_basic.py
