[project]
name = "auth"
version = "0.1.0"
description = "FastApi Authentication "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.0",
    "coverage>=7.12.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.5.8",
    "fastapi[all]>=0.123.9",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "passlib[argon]>=1.7.4",
    "phonenumbers>=9.0.19",
    "pybloom-live>=4.0.0",
    "pycountry>=24.6.1",
    "pyjwt[crypto]>=2.10.1",
    "pymongo[srv]>=4.15.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "scalar-fastapi>=1.5.0",
    "slowapi>=0.1.9",
    "twilio>=9.8.8",
]
